// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate non variant 1`] = `
Object {
  "name": "experiment_evaluated",
  "variables": Object {
    "enabled": true,
    "name": "is_something_active",
    "variant": null,
  },
}
`;

exports[`validate variant 1`] = `
Object {
  "name": "experiment_evaluated",
  "variables": Object {
    "enabled": true,
    "name": "chat_provider",
    "variant": "bot-service",
  },
}
`;
